# nano-serve

./: .gitignore  AGENTS.md  README.md  README.zh.md  TODO.md  main.py  pyproject.toml
docs/: architecture.md  benchmarking.md  references.md
docs/features/: 00-infrastructure.md  01-torch-forwarding.md  02-tokenizer-sampling-streaming.md  03-kv-cache-prefill-decode.md  04-static-batching.md  05-continuous-batching.md  06-paged-kv-cache.md  07-paged-attention-reference.md  08-tilelang-kernels.md  09-chunked-prefill.md  10-prefix-cache-radix.md  11-overlap-graphs.md  12-speculative-decoding.md  13-quantization-lora-structured.md  14-single-node-distributed.md  18-observability-production.md
scripts/: bench_dummy.py  download_assets.py  phase7_remote_tilelang.py
src/nano_serve/: __init__.py  assets.py  cli.py  platform.py
src/nano_serve/advanced/: __init__.py  lora.py  quantization.py  structured.py
src/nano_serve/attention/: __init__.py  paged_gather_torch.py  tile_paged_attention.py
src/nano_serve/benchmark/: __init__.py  compare.py  datasets.py  metrics.py  offline.py  phase0.py  phase10.py  phase11.py  phase12.py  phase13.py  phase5.py  phase6.py  phase7.py  phase8.py  phase9.py  profiler.py  report.py
src/nano_serve/distributed/: __init__.py  dp_router.py  ep.py  pp.py  rpc.py  tp.py  worker.py
tests/: test_imports.py  test_kv_cache.py  test_phase0.py  test_phase1.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase3.py  test_phase4.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_tracing.py
(+44 files in other folders)
