[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-serve"
version = "0.0.0"
description = "A benchmark-first learning-oriented LLM serving engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nano-serve contributors" }]
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
assets = [
  "huggingface-hub",
  "hf-xet",
]
torch = [
  "accelerate",
  "huggingface-hub",
  "hf-xet",
  "torch",
  "safetensors",
  "transformers",
]
server = [
  "fastapi",
  "uvicorn",
]
benchmark = [
  "numpy",
  "pandas",
  "matplotlib",
]
tilelang = [
  "tilelang==0.1.11",
  "apache-tvm-ffi==0.1.11",
  "cloudpickle",
  "ml-dtypes",
  "psutil",
  "torch-c-dlpack-ext",
  "tqdm",
  "typing-extensions",
  "z3-solver>=4.13.0,<4.15.5",
]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[project.scripts]
nano-serve = "nano_serve.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
packages = ["nano_serve"]

[[tool.mypy.overrides]]
module = "nano_serve.kernels.tilelang.paged_decode_kernel"
ignore_errors = true
